[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "khabri"
version = "0.1.0"
description = "Automated infrastructure and real estate news pipeline"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
