[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "khabri"
version = "0.1.0"
description = "Automated infrastructure and real estate news pipeline"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "feedparser>=6.0.12",
    "google-genai>=1.66.0",
    "httpx>=0.28.1",
    "pydantic>=2.5",
    "python-telegram-bot>=22.0",
    "PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "pre-commit>=3.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
